static/css/main.css
/* ... */
.current .author{
  font-size: 85%;
}
.social.tall{
  padding-top: 10px;
}
.social.tall li{
  margin-bottom: 10px;
  margin-left: 0;
  float: right;
  margin-right: 0;
}

.social { 
  margin-top: 0;
  list-style-type: none; 
  padding-left: 0;
}
.social li { 
  display: block;
  list-style-type: none;
  margin-right: 5px;
  margin-left: 5px;
  float: left;
  margin-bottom: 0;
}
.facebook a { 
  background: url("../images/face.png") left bottom no-repeat; 
  text-indent: -9999em; 
  display: block;
}
.twitter a { 
  background: url("../images/twit.png") left bottom no-repeat; 
  text-indent: -9999em; 
  display: block;
}
a.facebook { 
  background: url("../images/facebook.png") left bottom no-repeat;
}
a.twitter { 
  background: url("../images/twitter.png") left bottom no-repeat; 
}
.rss, .twitter, .facebook{
  width: 19px;
  height: 15px;
  margin-top: 2px;
}
.social .facebook, .social .twitter {
  float: left;
}
.count {
  background: #ffffff;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  padding: 2px 4px;
  display: block;
  float: left;
  font-size: 80%;
  margin-left: 3px;
  min-width: 20px;
  text-align: center
}

.rss{
  background: url(../images/rss.png) center bottom no-repeat;
  width: 15px;
  height: 15px;
}
.rss:hover, .twitter:hover, .facebook:hover{
  background-position: center top;
}


/* header */

#searchform { float: right; width: ; margin-top: 12px ; padding: 0; background: none; border: 0;}
header { }
header h1 { background: url(../images/logo.png) top left no-repeat; width: 658px; height: 178px; margin: 44px 0 0 0; float: left;}
nav { font-family: "droid-sans", sans-serif; text-transform: uppercase; font-size: 95%; font-weight: bold;}
nav li { float: left; margin-right: 25px; margin-top: 22px; }
nav a{ text-decoration: none;}
nav a:link, nav a:visited { color: #4a4a4a;}
nav a:hover, nav a:active{ color: #c92500; } 
nav li.active a:link { color: #c92500; }
/* doesn't seem to work--hit with stick: */
li.active a { color: #c92500; }

#searchform button { 
  width: 58px; 
  height: 58px; 
  float: right; 
  background: url(../images/btn_search.png) top left no-repeat; 
  border: none; 
  box-shadow: none; 
  font-size: 18px; 
  margin-top: -3px; 
  margin-left: -27px; 
  padding-left: 7px;
}
#searchform button:hover { 
  background: url(../images/btn_search.png) bottom left no-repeat;
}
.join input[name="zip"] {
  width: 104px;
}
#searchform input { 
  width: 370px; 
  border-bottom: 2px solid white; 
  padding-top: 10px; border: 0; 
  border-bottom: 2px solid #84c7c6; 
  float: left;
}
.sunlightMini{ 
  background: url(../images/sunlightLogoMini.png) left -4px no-repeat; 
  width: 143px; 
  height: 46px; 
  float: right;
}
.pagination{
  text-align: center;
  margin-top: 20px;
}
.pagination .pageNum{
  margin: 0 3px;
}
.pagination .more{
  float: right;
}
.week .dateNav {
  margin: 35px auto 10px auto;
  width: 290px;
}
.prev a.textReplace, .next a.textReplace{
  width: 28px;
  height: 20px;
  display: inline-block;
}
.next a.textReplace.more{
  text-indent: 0;
  padding-right: 40px;
  width: auto;
}
.prev a{
  background-image: url(../images/navigate_prev.png);
  background-position: left top;
  background-repeat: no-repeat;
  margin-right: 10px;
}
.prev a:hover{
  background-position: left bottom;
}
.next a{
  background-image: url(../images/navigate_next.png);
  background-position: right top;
  background-repeat: no-repeat;
  margin-left: 10px;
}
.next a:hover{
  background-position: right bottom;
}





/*  forms  */

button, a.button, .button { 
  background: #f5f4f1; /* Old browsers */
  background: -moz-linear-gradient(-45deg, #f5f4f1 0%, #f0efeb 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#f5f4f1), color-stop(100%,#f0efeb)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(-45deg, #f5f4f1 0%,#f0efeb 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(-45deg, #f5f4f1 0%,#f0efeb 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(-45deg, #f5f4f1 0%,#f0efeb 100%); /* IE10+ */
  background: linear-gradient(135deg, #f5f4f1 0%,#f0efeb 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f4f1', endColorstr='#f0efeb',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
  border-top: 1px solid #ffffff; 
  border-left: 1px solid #ffffff; 
  border-right: 1px solid #F0EFEB; 
  border-bottom: 1px solid #F0EFEB; 
  padding: 1px 15px 0 15px;
  font-family: "droid-sans", "helvetica neue", sans-serif;
  font-weight: bold;
  font-size: 23px;
  text-transform: uppercase; 
  color: rgba(214,44,0, 0.8);
  text-shadow: 1px 4px 6px #fbfaf7, 0 0 0 #000, 1px 4px 6px #fbfaf7;
  text-decoration: none;
  -webkit-box-shadow: 1px 2px 1px 1px #dedbd3;
  box-shadow: 1px 2px 1px 1px #dedbd3;
  line-height: 1.6;
}
/* ... */

